# bias_variance

./: .gitignore  README.md  TODOs.md  pyproject.toml  references.bib
bias_variance/: animator_plotting.py  index.html  index.qmd  predictor_plotter.qmd  utils.py
