[project]
name = "bias-variance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.3.2",
    "jupytext>=1.16.4",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "quarto>=0.1.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
